<resources>
    <string name="app_name">School of effective communication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="courses">Мои курсы</string>
    <string name="profile">Профиль</string>
    <string name="description_item_imageview">item imageView description</string>
    <string name="placeholder_soft_skills">Soft Skills. Навыки коммуникации</string>
    <string name="description_favorite_icon">favorite icon</string>
    <string name="title_placeholder">Title placeholder</string>
    <string name="favourite">Избранное</string>
    <string name="course_progress">Пройдено</string>
    <string name="whatch">Смотреть</string>
    <string name="seen_videos">0/0</string>
    <string name="category_placeholder">Карьера</string>
    <string name="duration_placeholder">Продолжительность</string>
    <string name="seen_videos_text">Видео просмотерно:</string>
    <string name="tests_passed">Тестов пройдено:</string>
    <string name="tests_passed_placeholder">0/0</string>
    <string name="add_to_my_courses">add to my courses</string>
    <string name="add_to_my_favorite">add to my favorite</string>
    <string name="login">Войти</string>
    <string name="signup">Регистрация</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="pass_the_test">Пройти тест</string>
    <string name="watch">Смотреть</string>
    <string name="add_button_text">Добавить</string>
    <string name="add_to_favorite_button">В избранное</string>
    <string name="signIn">Зарегистрироваться</string>
    <string name="Enter">Вход</string>
    <string name="Register">Регистрация</string>
    <string name="name_hint">ФИО</string>
    <string name="mail_hint">E-mail</string>
    <string name="phone_hint">Телефон</string>
    <string name="pass_hint">Пароль</string>
    <string name="exit">Выйти</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="name_placeholder">John Doe</string>
    <string name="email_placeholder">example@email.ru</string>
    <string name="empty_text">Пусто</string>
    <string name="playdescription">playDescription</string>
</resources>