<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    android:tint="@color/semi_transparent"
                    tools:ignore="UseAppTint"
                    tools:src="@drawable/im2"
                    android:contentDescription="@string/description_item_imageview"/>

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-black"
                    android:lines="3"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    tools:text="@string/placeholder_soft_skills" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/bottom_navigation_shape"
                    android:backgroundTint="@color/light_primary"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp"
                    tools:text="@string/category_placeholder" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/bottom_navigation_shape"
                    android:backgroundTint="@color/light_primary"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp"
                    tools:text="@string/duration_placeholder" />

            </LinearLayout>


            <TextView
                android:id="@+id/course_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/primary_text"
                android:textSize="15sp"
                tools:text="Lorem ipsum dolor sit agravida eu,non tortor in, bibendum finibus sem. Etiam commodo gravida justo sit amet commodo. Phaselluda justo sit amet commodo. Phaselluda justo sit amet commodo. Phaselluda justo sit amet commodo. Phaselluda justo sit amet commodo. Phasellus sollicitudin sem vitae ante porttitor, sed blandit dui faucibus. Donec sed ligula mattis, tincidunt enim nec, efficitur urna. Etiam quis aliquet est, sed scelerisque massa. Integer vel varius magna. Donec tristique, est nec accumsan egestas, velit mi malesuada tellus, eu tristiquet magna tortor sit amet lectus. Donec urna risus, mattis et odio id, pellentesque pellentesque elit. Aliquam pulvinar enim vel leo egestas, in maximus nibh rhoncus. Aliquam pharetra facilisis erat quis maximus. Donec et risus ut urna fermentum faucibus ut non dolor. Sed accumsan fringilla aliquam. Suspendisse sit amet nisl ut eros imperdiet fringilla in id nulla. Ut pretium pulvinar massa, sit amet pulvinar ante tincidunt volutpat." />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                >


                <Button
                    android:id="@+id/add_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_button_text"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/add_to_favorite_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_favorite_button"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif"
                    android:text="@string/seen_videos_text"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/watched_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_navigation_shape"
                    android:backgroundTint="@color/light_primary"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp"
                    tools:text="@string/seen_videos" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/tests_passed"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/passed_tests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_navigation_shape"
                    android:backgroundTint="@color/light_primary"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp"
                    tools:text="@string/tests_passed_placeholder" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
