<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ec1"
            android:contentDescription="@string/description_item_imageview" />

        <TextView
            android:id="@+id/item_header_text"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/primary_text"
            android:gravity="start"
            android:text="@string/placeholder_soft_skills"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:lines="2"
            android:textSize="18sp"
            android:ellipsize="end"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_margin="14dp"
        android:background="@drawable/selector_favorite_icon"
        android:clickable="true"
        android:contentDescription="@string/description_favorite_icon"
        android:focusable="true"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.cardview.widget.CardView>
